# qr_rust

./: .editorconfig  .gitignore  Cargo.toml  References.md
.devcontainer/: devcontainer.json
src/: lib.rs  main.rs
tests/: try_image.rs
