[package]
name = "qr_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
image = "0.25.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
testresult = "0.4.0"
